--- a/user_therapist/form_treatment.html
+++ b/user_therapist/form_treatment.html
@@ -283,7 +283,8 @@ License: You must have a valid license purchased only from themeforest(the above
 						<!-- end:: Content Head -->
 
 						<!-- begin:: Content -->
-                        <div class="kt-container  kt-container--fluid  kt-grid__item kt-grid__item--fluid">
+
+						<div class="kt-container  kt-container--fluid  kt-grid__item kt-grid__item--fluid">
 
 							<div class="row justify-content-center">
 								<h4 class="horizontal-centered">Form Treatment</h4>
@@ -302,29 +303,28 @@ License: You must have a valid license purchased only from themeforest(the above
 												</h3>
 											</div>
 										</div>
-										<div class="kt-portlet__body">
-											<form id="kt_form_1">
+										<form id="kt_form_treatment">
+											<div class="kt-portlet__body">
 												<div class="form-group">
-													<label class="form-control-label">Nama</label>
-													<select class="form-control kt-select2" id="kt_select2_treatment_customer_nama" name="treatment_customer_nama"></select>
+													<label class="form-control-label">No. Telepon :</label>
+													<select class="form-control kt-select2" id="kt_select2_treatment_customer_nohp" name="treatment_customer_nohp"></select>
 													<span class="form-text text-muted kt-hidden" style="margin:0px;"></span>
 												</div>
 												<div class="form-group">
-													<label class="form-control-label">No. Telepon</label>
-													<input type="text" class="form-control" type="text" name="treatment_customer_nohp" placeholder="No. Telepon">
-													<div class="col-12" style="padding:0px;text-align:right;">
-														<button type="button" class="btn btn-link" style="padding-right:0px;" data-toggle="modal" data-target="#kt_modal_1"><i class="flaticon-add"></i>Tambah Pelanggan</button>
-													</div>
+													<label class="form-control-label">Nama :</label>
+													<input type="text" class="form-control" type="text" id="treatment_customer_nama" name="treatment_customer_nama" placeholder="Nama" readonly>
 												</div>
-												<div class="form-group">
-													<label class="form-control-label">Catatan</label>
-													<textarea type="text" class="form-control" rows="3" name="treatment_catatan" placeholder="Catatan"></textarea>
+												<div class="" style="padding:0px;text-align:center;">
+													<button type="button" class="btn btn-link" style="padding-right:0px;" data-toggle="modal" data-target="#kt_modal_customer"><i class="flaticon-add"></i>Tambah Pelanggan</button>
 												</div>
-												<div class="col-12 horizontal-centered kt-margin-0" style="padding: 0px 0px">
-													<button type="submit" class="btn btn-success" style="width:25%;" id="kt_sweetalert_berhasil">Submit</buttton>
+											</div>
+											<div class="kt-portlet__foot">
+												<div class="horizontal-centered kt-margin-0" style="padding: 0px 0px;">
+													<button type="submit" class="btn btn-warning kt_sweetalert_berhasil" style="margin-right: 0.25rem">Jadwalkan</buttton>&nbsp;
+													<button type="submit" class="btn btn-brand kt_sweetalert_berhasil" style="margin-left: 0.25rem">Activate Session</buttton>
 												</div>
-											</form>
-										</div>
+											</div>
+										</form>
 									</div>
 
 									<!--end::Portlet-->
@@ -333,7 +333,7 @@ License: You must have a valid license purchased only from themeforest(the above
 							</div>
 
 							<!--begin::Modal-->
-							<div class="modal fade" id="kt_modal_1" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+							<div class="modal fade" id="kt_modal_customer" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
 								<div class="modal-dialog" role="document">
 									<div class="modal-content">
 										<div class="modal-header">
@@ -341,17 +341,17 @@ License: You must have a valid license purchased only from themeforest(the above
 											<button type="button" class="close" data-dismiss="modal" aria-label="Close">
 											</button>
 										</div>
-										<form id="kt_form_2">
+										<form id="kt_form_customer">
 											<div class="modal-body">
 												<div class="form-group row">
-													<label for="example-text-input" class="col-4 col-form-label">Nama</label>
-													<div class="col-8">
+													<label class="col-sm-4 col-form-label">Nama :</label>
+													<div class="col-sm-8">
 														<input type="text" class="form-control" name="customer_nama" placeholder="Nama">
 													</div>
 												</div>
 												<div class="form-group row">
-													<label for="example-text-input" class="col-4 col-form-label">Tanggal Lahir</label>
-													<div class="col-8">
+													<label class="col-sm-4 col-form-label">Tanggal Lahir :</label>
+													<div class="col-sm-8">
 														<div class="input-group date">
 															<input type="text" class="form-control" readonly="" placeholder="Tanggal" id="kt_search_tanggal" name="customer_lahir">
 															<div class="input-group-append">
@@ -364,32 +364,32 @@ License: You must have a valid license purchased only from themeforest(the above
 													</div>
 												</div>
 												<div class="form-group row">
-													<label for="example-text-input" class="col-4 col-form-label">No. Telepon</label>
-													<div class="col-8">
+													<label class="col-sm-4 col-form-label">No. Telepon :</label>
+													<div class="col-sm-8">
 														<input type="text" class="form-control" name="customer_nohp" placeholder="No. Telepon">
 													</div>
 												</div>
 												<div class="form-group row">
-													<label for="example-text-input" class="col-4 col-form-label">Email</label>
-													<div class="col-8">
+													<label class="col-sm-4 col-form-label">Email :</label>
+													<div class="col-sm-8">
 														<input type="email" class="form-control" name="customer_email" placeholder="Email">
 													</div>
 												</div>
 												<div class="form-group row">
-													<label for="example-text-input" class="col-4 col-form-label">Alamat</label>
-													<div class="col-8">
+													<label class="col-sm-4 col-form-label">Alamat :</label>
+													<div class="col-sm-8">
 														<input type="text" class="form-control" name="customer_alamat" placeholder="Alamat">
 													</div>
 												</div>
 												<div class="form-group row">
-													<label for="example-text-input" class="col-4 col-form-label">Persetujuan</label>
-													<div class="col-5">
-														<input type="text" class="form-control" style="background-color: #5578eb1a; color: #5578eb;" value="Persetujuan" readonly>
-														<input type="text" class="form-control kt-hidden" style="background-color: #17bdbd26; color: #17bdbd" value="Setuju" readonly>
-														<input type="text" class="form-control kt-hidden" style="background-color: #fd397a1a; color: #fd397a;" value="Ditolak" readonly>
-													</div>
-													<div class="col-3">
-														<a class="btn btn-success" id="showtoast" style="color:#fff; cursor:pointer; width:100%;">Send</a>
+													<label class="col-sm-4 col-form-label">Persetujuan :</label>
+													<div class="col-sm-8">
+														<div class="input-group">
+															<input type="text" class="form-control form-label-brand input-group-child-normal kt-margin-r-5" value="Persetujuan" readonly>
+															<input type="text" class="form-control form-label-success input-group-child-normal kt-margin-r-5 kt-hidden" value="Setuju" readonly>
+															<input type="text" class="form-control form-label-danger input-group-child-normal kt-margin-r-5 kt-hidden" value="Ditolak" readonly>
+															<button type="button" class="btn btn-brand" id="showtoast" style="width:auto;">Send</button>
+														</div>
 													</div>
 												</div>
 											</div>
@@ -479,73 +479,38 @@ License: You must have a valid license purchased only from themeforest(the above
 		<script src="assets/js/script/datatable_therapist.js"></script>
 		<script src="assets/js/custom/datepicker.js" type="text/javascript"></script>
 
-        <script>
-			// Select2
-			function formatRepo(repo) {
-	            if (repo.loading) return repo.text;
-	            var markup = "<div class='select2-result-repository clearfix'>" +
-	                "<div class='select2-result-repository__meta'>" +
-	                "<div class='select2-result-repository__title'>" + repo.full_name + "</div>";
-	            if (repo.description) {
-	                markup += "<div class='select2-result-repository__description'>" + repo.description + "</div>";
-	            }
-	            markup += "<div class='select2-result-repository__statistics'>" +
-	                "<div class='select2-result-repository__forks'><i class='fa fa-flash'></i> " + repo.forks_count + " Forks</div>" +
-	                "<div class='select2-result-repository__stargazers'><i class='fa fa-star'></i> " + repo.stargazers_count + " Stars</div>" +
-	                "<div class='select2-result-repository__watchers'><i class='fa fa-eye'></i> " + repo.watchers_count + " Watchers</div>" +
-	                "</div>" +
-	                "</div></div>";
-	            return markup;
-	        }
-
-	        function formatRepoSelection(repo) {
-	            return repo.full_name || repo.text;
-	        }
-
-			$("#kt_select2_treatment_customer_nama").select2({
-	            placeholder: "Nama",
-			    multiple: true,
-			    maximumSelectionSize: 1,
-	            allowClear: true,
-	            ajax: {
-	                url: "source/customer.json",
-	                dataType: 'json',
-			        type: "GET",
-	                delay: 250,
-	                data: function(params) {
-	                    return {
-	                        q: params.term, // search term
-	                        page: params.page
-	                    };
-	                },
-	                processResults: function(data, params) {
-	                    // parse the results into the format expected by Select2
-	                    // since we are using custom formatting functions we do not need to
-	                    // alter the remote JSON data, except to indicate that infinite
-	                    // scrolling can be used
-	                    params.page = params.page || 1;
-
+		<script>
+			// Select2 ajax
+			$('#kt_select2_treatment_customer_nohp').select2({
+				multiple: true,
+				maximumSelectionSize: 1,
+				maximumSelectionLength: 1,
+				placeholder: 'No. Telepon',
+				ajax: {
+					url: 'source/admin/customer_select2.php',
+					dataType: 'json',
+					delay: 250,
+					processResults: function (data) {
 						return {
-			                results: $.map(data, function (item) {
-			                    return {
-			                        text: item.nama+', '+item.alamat,
-			                        id: item.no
-			                    }
-			                })
-			            };
-	                },
-	                cache: true
-	            },
-	            escapeMarkup: function(markup) {
-	                return markup;
-	            }, // let our custom formatter work
-	            minimumInputLength: 1
-	            // templateResult: formatRepo, // omitted for brevity, see the source of this page
-	            // templateSelection: formatRepoSelection // omitted for brevity, see the source of this page
-	        });
+							results: $.map(data, function(item) {
+								return {
+									text: item.number,
+									nama: item.nama,
+									id: item.id
+								}
+							})
+						}
+					},
+				}
+			});
 
-            // Sweetalert
-			$('#kt_sweetalert_berhasil').click(function(e) {
+			$('#kt_select2_treatment_customer_nohp').change(function () {
+				var dataArray = $('#kt_select2_treatment_customer_nohp').select2('data');
+				document.getElementById("treatment_customer_nama").setAttribute('value',dataArray[0].nama);
+			});
+
+			// Sweetalert
+			$('.kt_sweetalert_berhasil').click(function(e) {
 				swal.fire({
 					title: "Berhasil",
 					text: "Treatment berhasil ditambahkan.",
@@ -632,7 +597,7 @@ License: You must have a valid license purchased only from themeforest(the above
 			});
 
 			// Form Validation
-			$("#kt_form_1").validate({
+			$("#kt_form_treatment").validate({
 	            // define validation rules
 	            rules: {
 	                treatment_customer_nohp: {
@@ -652,7 +617,7 @@ License: You must have a valid license purchased only from themeforest(the above
 	            }
         	});
 
-			$("#kt_form_2").validate({
+			$("#kt_form_customer").validate({
 	            // define validation rules
 	            rules: {
 					customer_nama : {
