--- a/user_admin/listTreatment_detail_ongoing.html
+++ b/user_admin/listTreatment_detail_ongoing.html
@@ -304,7 +304,7 @@ License: You must have a valid license purchased only from themeforest(the above
 										<a href="user_admin/listTreatment_active.html" class="kt-subheader__breadcrumbs-link">
 											Active Treatments </a>
 										<span class="kt-subheader__breadcrumbs-separator"></span>
-										<a href="user_admin/listTreatment_detail_scheduled.html" class="kt-subheader__breadcrumbs-link">
+										<a href="user_admin/listTreatment_detail_unpaid.html" class="kt-subheader__breadcrumbs-link">
 											Treatment Details </a>
 									</div>
 								</div>
@@ -321,7 +321,7 @@ License: You must have a valid license purchased only from themeforest(the above
 								<div class="col-lg-8 col-xl-6">
 
 									<!--begin::Portlet-->
-									<div class="kt-portlet kt-portlet--mobile">
+									<div class="kt-portlet kt-portlet--mobile" id="print-section">
 										<div class="kt-portlet__head centered-content">
 											<div class="kt-portlet__head-label">
 												<h3 class="kt-portlet__head-title">
@@ -330,17 +330,29 @@ License: You must have a valid license purchased only from themeforest(the above
 											</div>
 										</div>
 										<div class="kt-portlet__body">
-                                            <div style="margin-bottom:20px;">
-                                                <h5 class="color-main-dark" name="nomor_pesanan">#123456</h5>
-                                                <span class="kt-font-bold" name="customer_nama">Darnilla</span>&nbsp;<br>
-                                                <span class="kt-font-bold" name="customer_nohp">081342497228</span>&nbsp;<br>
-                                                <span class="kt-font-bold" name="customer_alamat">Jl. Areopala 6</span>&nbsp;<br>
+                                            <div class="row" style="margin-bottom:20px;">
+												<div class="col-6">
+	                                                <h5 class="color-main-dark" name="nomor_pesanan">#123456</h5>
+	                                                <span class="kt-font-bold" name="customer_nama">Darnilla</span>&nbsp;<br>
+	                                                <span class="kt-font-bold" name="customer_nohp">081342497228</span>&nbsp;<br>
+	                                                <span class="kt-font-bold" name="customer_alamat">Jl. Areopala 6</span>&nbsp;<br>
+												</div>
+												<div class="col-6">
+													<div class="row">
+														<div class="col-12" style="text-align: right; margin-bottom:5px;">
+															<button class="col-5 btn btn-warning" onclick="printFunction()">Print</button>
+														</div>
+														<div class="col-12" style="text-align: right;">
+															<button class="col-5 btn btn-danger" id="kt_sweetalert_void">Void</button>
+														</div>
+													</div>
+												</div>
                                             </div>
-                                            <table class="col-5" style="margin-bottom:50px">
+                                            <table class="col-sm-12 col-md-8 col-lg-6" style="margin-bottom:50px">
                                                 <tr>
-                                                    <th>Tanggal</th>
-                                                    <th>:</th>
-                                                    <th style="font-weight:500;" name="treatment_hari">2 Oktober 2019</th>
+                                                    <th width="30%">Tanggal</th>
+                                                    <th width="10%">:</th>
+                                                    <th width="60%"style="font-weight:500;" name="treatment_hari">2 Oktober 2019</th>
                                                 </tr>
                                                 <tr>
                                                     <th>Therapist</th>
@@ -349,12 +361,23 @@ License: You must have a valid license purchased only from themeforest(the above
                                                 </tr>
                                             </table>
         									<table class="table table-striped- table-bordered table-hover table-checkable" id="table_treatment_detail"></table>
-                                            <div class="col-12">
-												<div class="row justify-end" style="padding: 0px; margin-top:50px;">
-													<div class="col-6 justify-end" style="padding: 0px">
-		                                                <button type="button" class="btn btn-danger col-5" id="kt_sweetalert_batal">Batal</buttton>&nbsp;
-														<button type="button" class="btn btn-brand col-5" onclick="window.location.href='user_admin/listTreatment_detail_waiting.html'" style="margin-left: 5px">Mulai</buttton>
-													</div>
+											<div class="row" style="margin-top:50px;">
+												<div class="col-6" style="padding-right:0px;">
+													<table class="col-sm-24 col-md-16 col-lg-12" style="bottom: 0px; position: absolute;">
+		                                                <tr>
+		                                                    <th width="35%">Waktu Mulai</th>
+		                                                    <th width="10%">:</th>
+		                                                    <th width="55%"style="font-weight:500;" name="waktu_mulai">08.00 WITA</th>
+		                                                </tr>
+		                                                <tr>
+		                                                    <th>Waktu Selesai</th>
+		                                                    <th>:</th>
+		                                                    <th style="font-weight:500;" name="waktu-selesai">10.00 WITA</th>
+		                                                </tr>
+		                                            </table>
+												</div>
+												<div class="col-6" style="padding-left:0px;text-align:right;">
+													<button class="col-5 btn btn-success" style="margin-top:5px;" data-toggle="modal" data-target="#kt_modal_treatment_bayar">Bayar</button>
 												</div>
                                             </div>
 										</div>
@@ -364,6 +387,70 @@ License: You must have a valid license purchased only from themeforest(the above
 								</div>
 
 							</div>
+
+                            <!--begin::Modal-->
+							<div class="modal fade" id="kt_modal_treatment_bayar" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                <div class="modal-dialog" role="document">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <h5 class="modal-title" id="exampleModalLabel">Pembayaran</h5>
+                                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                            </button>
+                                        </div>
+										<form id="kt_form_pembayaran">
+	                                        <div class="modal-body">
+												<div class="justify-center kt-margin-b-10">
+													<h4 class="color-main-dark" name="pembayaran_nominal">Rp. 300.000,00</h4>
+												</div>
+                                                <div class="form-group row">
+                                                    <label class="col-form-label col-4">Jenis</label>
+                                                    <div class="col-8">
+														<div class="kt-radio-inline">
+															<label class="kt-radio">
+																<input type="radio"  name="pembayaran_jenis"> Cash
+																<span></span>
+															</label>
+														</div>
+														<div class="kt-radio-inline">
+															<label class="col-6 kt-radio">
+																<input type="radio" name="pembayaran_jenis"> EDC Mandiri
+																<span></span>
+															</label>
+															<label class="col-5 kt-radio">
+																<input type="radio" name="pembayaran_jenis"> EDC BNI
+																<span></span>
+															</label>
+														</div>
+														<div class="kt-radio-inline">
+															<label class="col-6 kt-radio">
+																<input type="radio" name="pembayaran_jenis"> Transfer Mandiri
+																<span></span>
+															</label>
+															<label class="col-5 kt-radio">
+																<input type="radio" name="pembayaran_jenis"> Transfer BNI
+																<span></span>
+															</label>
+														</div>
+														<span class="form-text text-muted" style="margin:0px;"></span>
+                                                    </div>
+                                                </div>
+                                                <div class="form-group row">
+                                                    <label for="example-text-input" class="col-4 col-form-label">Diskon</label>
+                                                    <div class="col-8">
+                                                        <input type="text" class="form-control" name="pembayaran_diskon" placeholder="Diskon">
+                                                    </div>
+                                                </div>
+	                                        </div>
+	                                        <div class="modal-footer" style="justify-content:center;">
+	                                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+	                                            <button type="submit" class="btn btn-success" id="kt_sweetalert_berhasil_modal_2">Submit</button>
+	                                        </div>
+										</form>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <!--end::Modal-->
 
 						</div>
 
@@ -442,23 +529,62 @@ License: You must have a valid license purchased only from themeforest(the above
 		<script src="assets/js/script/datatable_admin.js"></script>
 
 		<script>
-			$('#kt_sweetalert_batal').click(function(e) {
+			// Print function
+			var printFunction = function () {
+				window.print();
+			}
+
+			// Sweetalert
+			$('#kt_sweetalert_berhasil_modal_2').click(function(e) {
 				swal.fire({
-					title: 'Yakin untuk membatalkan?',
+					title: "Berhasil",
+					text: "Pembayaran berhasil dilakukan",
+					type: "success",
+					confirmButtonText: "Ok",
+					confirmButtonClass: "btn btn-brand"
+				}).then(function(result) {
+					// location.reload();
+				});
+			});
+
+			$('#kt_sweetalert_void').click(function(e) {
+				swal.fire({
+					title: 'Tandai sebagai void treatment?',
 					text: "Tindakan ini tidak bisa diubah kembali!",
 					type: 'warning',
 					showCancelButton: true,
-					confirmButtonText: 'Ya, batalkan!'
+					confirmButtonText: 'Ya, tandai!'
 				}).then(function(result) {
 					if (result.value) {
 						swal.fire(
-							'Dibatalkan!',
-							'Treatment telah dibatalkan.',
+							'Ditandai sebagai void!',
+							'Treatment telah digolongkan sebagai void treatment.',
 							'success'
 						)
 					}
 				});
 			});
+
+			// Form Validation
+			$("#kt_form_pembayaran").validate({
+	            // define validation rules
+	            rules: {
+					pembayaran_jenis : {
+						required: true
+					},
+					pembayaran_diskon : {
+						required: false,
+						digits: true
+					}
+	            },
+
+	            invalidHandler: function(event, validator) {
+	                KTUtil.scrollTop();
+	            },
+	            submitHandler: function(form) {
+	                //form[0].submit(); // submit the form
+	            }
+        	});
 		</script>
 
 		<!--end::Page Scripts -->
