--- a/user_therapist/treatment_detail_scheduled.html
+++ b/user_therapist/treatment_detail_scheduled.html
@@ -306,9 +306,6 @@ License: You must have a valid license purchased only from themeforest(the above
 										<div class="kt-portlet__body">
 											<div style="margin-bottom:20px;">
                                                 <h5 class="color-main-dark" name="nomor_pesanan">#123456</h5>
-                                                <span class="kt-font-bold" name="customer_nama">Darnilla</span>&nbsp;<br>
-                                                <span class="kt-font-bold" name="customer_nohp">081342497228</span>&nbsp;<br>
-                                                <span class="kt-font-bold" name="customer_alamat">Jl. Areopala 6</span>&nbsp;<br>
                                             </div>
                                             <table class="col-5" style="margin-bottom:50px">
                                                 <tr>
@@ -319,8 +316,8 @@ License: You must have a valid license purchased only from themeforest(the above
                                             </table>
         									<table class="table table-striped- table-bordered table-hover table-checkable" id="table_treatment_detail"></table>
 											<div class="row" style="margin-top:50px;">
-												<div class="col-6" style="padding-right:0px; position: relative;">
-		                                            <table class="col-sm-24 col-md-16 col-lg-12" style="bottom: 0px; position: absolute;">
+												<div class="col-6" style="padding-right:0px;">
+		                                            <table class="col-sm-24 col-md-16 col-lg-12" style="bottom: 0px;">
 		                                                <tr>
 		                                                    <th width="35%">Waktu Mulai</th>
 		                                                    <th width="10%">:</th>
@@ -329,17 +326,16 @@ License: You must have a valid license purchased only from themeforest(the above
 		                                                <tr>
 		                                                    <th>Waktu Selesai</th>
 		                                                    <th>:</th>
-		                                                    <th style="font-weight:500;" name="waktu-selesai">10.00 WITA</th>
+		                                                    <th style="font-weight:500;" name="waktu-selesai">-</th>
 		                                                </tr>
 		                                            </table>
 												</div>
-
-												<div class="col-6 justify-end" style="padding-left:0px">
+												<!-- <div class="col-6 justify-end" style="padding-left:0px">
 													<div class="col-5" style="padding: 0px">
 														<button type="button" class="btn btn-brand col-12" style="margin-bottom: 5px;" onclick="window.location.href='user_therapist/treatment_detail_ongoing.html'">Mulai</buttton>&nbsp;
 														<button type="button" class="btn btn-success col-12" data-toggle="modal" data-target="#kt_modal_treatment_selesai">Selesai</buttton>
 													</div>
-												</div>
+												</div> -->
                                             </div>
 										</div>
 									</div>
